apps/nginx/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  # annotations:
  #   cert-manager.io/cluster-issuer: inarm-cluster-issuer
spec:
  ingressClassName: kong
  rules:
    - host: nginx.inarm.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
